--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/gallery"]
 	path = themes/gallery
 	url = https://github.com/nicokaiser/hugo-theme-gallery.git
+[submodule "public"]
+	path = public
+	url = https://github.com/songyeongkim/songyeongkim.github.io.git
+	branch = main
