html 수정 테스트

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ languageCode = 'en-us'
 title = 'songyeongkim'
 
 [params]
-  defaultTheme = "dark"
+  defaultTheme = "light"
   description = "songyeongkim illustrations"
   title = "songyeongkim"
   [params.author]
