비디오 링크 업로드 추가

--- a/hugo.toml
+++ b/hugo.toml
@@ -7,10 +7,15 @@ title = 'songyeongkim'
   description = "songyeongkim illustrations"
   title = "songyeongkim"
   link = ""
+  videoUrl = ""
   [params.author]
     email = "songyeong125@gmail.com"
     name = "songyeongkim"
 
+ [[resources]]
+ title = ""
+ videoUrl = ""
+ src = []
 
 [module]
   [[module.imports]]
